proto/nnparser.py
from nnlogger import LOGGER
from tokenizer import *
from symbol_table import *
from type_table import *
from nnast import *
import traceback
from collections import OrderedDict

class ParserException(Exception):
    def __init__(self, t: Tokenizer, message: str = "", cb = -1, cf = -1, max_chars = 80):
        msg = t.r.get_pretty_pos() + ' ' + t.r.get_line() + ': ' + message
        super().__init__(msg)

class ParserError(Exception):
    def __init__(self, msg: str):
        super().__init__(msg)

class Context:
    def __init__(self, st: SymbolTable = None, expected: Type = None):
        self.st = st or SymbolTable()
        self.expected = expected or Type(0)

class ContextContextManager:
    def __init__(self, ctxs: 'ContextStack', ctx: Context):
        self.ctxs = ctxs
        self.ctx = ctx

    def __enter__(self):
        self.ctxs.push(self.ctx)

    def __exit__(self, exc_type, exc_val, exc_tb):
        self.ctxs.pop()

class ContextStack:
    def __init__(self, ctx: Context):
        self.stack = [ctx]

    @property
    def top(self):
        return self.stack[-1]

    def push(self, ctx: Context):
        self.stack.append(ctx)

    def pop(self):
        return self.stack.pop()

    def save_and_push(self, ctx: Context = None):
        return ContextContextManager(self, ctx or self.top)

class Parser:
    def __init__(self, t: Tokenizer):
        self.t = t
        self.st = SymbolTable()
        self.tt = TypeTable()
        self.cx = ContextStack(Context(self.st))
        self.c: Token = None
        self.next()

    @property
    def cst(self):
        return self.cx.top.st

    @property
    def etype(self):
        return self.cx.top.expected

    @etype.setter
    def etype(self, val: Type):
        self.cx.top.expected = val

    def exception(self, msg: str, cb = -1, cf = -1, max_chars = 80):
        return ParserException(self.t, msg, cb, cf, max_chars)

    def next(self):
        tmp = self.c
        self.c = self.t.next()
        return tmp

    def cis(self, param: Union[TokenType, Keyword, Symbol]):
        if isinstance(param, TokenType):
            return self.c.type == param
        elif isinstance(param, Keyword):
            return self.c.to_keyword() == param
        elif isinstance(param, Symbol):
            return self.c.to_symbol() == param
        else:
            raise ParserError("Undefined parameter type for cis()")

    def cpeek(self, param: Union[TokenType, Keyword, Symbol], lookahead=0):
        tmp = self.t.peek(lookahead)
        if isinstance(param, TokenType):
            return tmp.type == param
        elif isinstance(param, Keyword):
            return tmp.to_keyword() == param
        elif isinstance(param, Symbol):
            return tmp.to_symbol() == param

    def require_error(self, param: Union[TokenType, Keyword, Symbol]):
        if isinstance(param, TokenType):
            return 'Expected token of type {} but got {} instead'.format(param.name, self.c.type.name)
        elif isinstance(param, Keyword):
            return 'Expected keyword {} but got {} instead'.format(param.name, self.c.to_keyword().name if self.c.type is TokenType.KEYWORD else 'token type {}'.format(self.c.type.name))
        elif isinstance(param, Symbol):
            return 'Expected symbol {} but got {} instead'.format(param.name, self.c.to_symbol().name if self.c.type is TokenType.KEYWORD else 'token type {}'.format(self.c.type.name))

    def crequire(self, param: Union[TokenType, Keyword, Symbol], message: str = ''):
        if not self.cis(param):
            raise self.exception(message or self.require_error(param))

    # Must already be defined
    def iden(self):
        self.crequire(TokenType.IDENTIFIER)
        tmp = self.next()
        sym = self.cst.search(tmp.value, True)
        if sym is None:
            raise self.exception("Symbol \"{}\" is does not exist".format(tmp.value))
        return AstSymbol(sym, tmp.value) # TODO Foolproof

    def compileriden(self):
        return AstNone() # Todo

    def number(self):
        self.crequire(TokenType.NUMBER)
        return AstQWord(self.next().to_int(), Type(TypeID.LONG)) # Todo fit

    def string(self):
        self.crequire(TokenType.STRING)
        return AstString(self.next().value)

    def character(self):
        self.crequire(TokenType.CHARACTER)
        return AstDWord(self.next().value, Type(TypeID.CHAR))

    # Expected value must be array/pointer type
    def array(self):
        self.crequire(Symbol.BRACKET_LEFT) # [
        etype = Type(TypeID.LET) # self.tt[self.cx.top.expected.uid].at # TODO
        ret = AstArray([], Type(TypeID.LET)) # Might throw

        with self.cx.save_and_push(Context(self.cst, etype)):
            while self.cis(Symbol.COMMA) or self.cis(Symbol.BRACKET_LEFT):
                self.next() # [ ,
                if self.cis(Symbol.BRACKET_RIGHT): # ]
                    break
                else:
                    exp = self.expression() # Moves us to next comma
                    if etype.uid == TypeID.LET:
                        etype.uid = exp.type.uid
                    elif etype.uid != exp.type.uid: # Todo Type comparisons
                        raise self.exception("Cannot convert {} to {} for array".format(self.etype.uid, exp.type.uid))
                    ret.data.append(exp)

        self.crequire(Symbol.BRACKET_RIGHT) # ]
        self.next()

        ttype = TypePointer(etype)
        mangled = self.tt.mangle(ttype)
        if mangled in self.tt.mangled:
            ptype = Type(self.tt.mangled[self.tt.mangle(ttype)])
        else:
            ptype = Type(self.tt.add_type(mangled))
        ret.type = ptype

        return ret

    def struct_lit(self):
        self.crequire(Symbol.BRACE_LEFT)

        ret = AstStruct([], self.etype)
        with self.cx.save_and_push():
            stype: TypeStruct = self.tt[self.etype.uid]
            for x in stype.fields:
                ret.elements.append(x.value)

            named = False
            elem = 0
            self.etype.uid = TypeID.LET

            while self.cis(Symbol.COMMA) or self.cis(Symbol.BRACE_LEFT):
                self.next() # { ,
                if named or self.cpeek(Symbol.ASSIGN):
                    named = True
                    name = self.c.value
                    self.next() # Field name
                    self.crequire(Symbol.ASSIGN)
                    self.next() # =

                    if name not in stype.field_names:
                        raise self.exception("Name " + name + " is not a field in struct " + str(stype.name))
                    pos = stype.field_names.index(name)
                    self.etype = stype.fields[pos].type
                    ret.elements[pos] = self.expression() # Todo bitfields
                    self.etype = Type(TypeID.LET)
                else:
                    self.etype = stype.fields[elem].type
                    ret.elements[elem] = self.expression() # Todo bitfields
                    self.etype = Type(TypeID.LET)
                elem += 1
        self.crequire(Symbol.BRACE_RIGHT) # }
        self.next() # }

        return ret

    def literal(self):
        if self.cis(TokenType.CHARACTER):
            return self.character()
        elif self.cis(TokenType.NUMBER):
            return self.number()
        elif self.cis(TokenType.STRING):
            return self.string()
        elif self.cis(Symbol.BRACE_LEFT):
            return self.struct_lit()
        elif self.cis(Symbol.BRACKET_LEFT):
            return self.array()
        elif self.cis(Keyword.TRUE) or self.cis(Keyword.FALSE):
            kw = self.next()
            return AstByte(int(kw.to_keyword() == Keyword.TRUE), Type(TypeID.BOOL))
        else:
            raise ParserError("literal() called on non-literal")

    def program(self):
        broken = False
        ret = AstBlock([], self.cst)

        while True:
            try:
                if self.cis(Keyword.USING):
                    ret.stmts.append(self.usingstmt())
                elif self.cis(Keyword.NAMESPACE):
                    ret.stmts.append(self.namespacestmt())
                elif self.is_pre_decl():
                    ret.stmts.append(self.declstmt())
                elif self.cis(Keyword.IMPORT):
                    ret.stmts.append(self.importstmt())
                elif self.cis(TokenType.EOF):
                    break
                else:
                    broken = True
                    break
            except ParserException as ex:
                LOGGER.error('Whoops! An error was found while parsing [{}] ({}): {}'.format(self.c, self.t.r.get_pretty_pos(), ex))
                # LOGGER.error('\n', traceback.format_exc())
                raise
            except Exception as ex:
                LOGGER.error('Exception detected. While parsing [{}] ({}):'.format(self.c, self.t.r.get_pretty_pos()))
                # LOGGER.error('\n', traceback.format_exc())
                raise
        if broken:
            raise self.exception("Top level statement not using, namespace or declaration")

        return ret

    def statement(self):
        if self.cis(TokenType.COMPILER_IDENTIFIER):
            self.compileriden()

        if self.cis(Keyword.IF):
            return self.ifstmt()
        elif self.cis(Keyword.FOR):
            return self.forstmt()
        elif self.cis(Keyword.WHILE):
            return self.whilestmt()
        elif self.cis(Keyword.SWITCH):
            return self.switchstmt()
        elif self.cis(Keyword.RETURN):
            return self.returnstmt()
        elif self.cis(Keyword.RAISE):
            return self.raisestmt()
        elif self.cis(Keyword.GOTO):
            return self.gotostmt()
        elif self.cis(Keyword.LABEL):
            return self.labelstmt()
        elif self.cis(Keyword.DEFER):
            return self.deferstmt()
        elif self.cis(Keyword.BREAK):
            return self.breakstmt()
        elif self.cis(Keyword.CONTINUE):
            return self.continuestmt()
        elif self.cis(Keyword.LEAVE):
            return self.leavestmt()
        elif self.cis(Keyword.USING):
            return self.usingstmt()
        elif self.cis(Keyword.NAMESPACE):
            return self.namespacestmt()
        elif self.is_pre_decl():
            return self.declstmt()
        elif self.cis(Symbol.BRACE_LEFT):
            return self.scope()
        elif self.is_expression():
            self.t.peek_until(Symbol.SEMICOLON) # TODO Fix
            if self.t.search_lookahead(*assign_symbols) is not None:
                return self.assstmt()
            else:
                return self.expressionstmt()
        else:
            raise self.exception("Unexpected token: " + self.c.value)

    def scopestatement(self):
        if self.cis(Keyword.IF):
            return self.ifstmt()
        elif self.cis(Keyword.FOR):
            return self.forstmt()
        elif self.cis(Keyword.WHILE):
            return self.whilestmt()
        elif self.cis(Keyword.SWITCH):
            return self.switchstmt()
        elif self.cis(Keyword.RETURN):
            return self.returnstmt()
        elif self.cis(Keyword.RAISE):
            return self.raisestmt()
        elif self.cis(Keyword.GOTO):
            return self.gotostmt()
        elif self.cis(Keyword.BREAK):
            return self.breakstmt()
        elif self.cis(Keyword.CONTINUE):
            return self.continuestmt()
        elif self.cis(Keyword.LEAVE):
            return self.leavestmt()
        elif self.cis(Symbol.BRACE_LEFT):
            return self.scope()
        elif self.is_expression():
            self.t.peek_until(Symbol.SEMICOLON) # TODO Fix
            if self.t.search_lookahead(*assign_symbols):
                return self.assstmt()
            else:
                return self.expressionstmt()
        else:
            raise self.exception("Unexpected token: " + self.c.value)

    def compileropts(self):
        self.crequire(Symbol.COMPILER) # TODO
        self.next() # $
        self.crequire(Symbol.BRACKET_LEFT)
        while self.cis(Symbol.COMMA) or self.cis(Symbol.BRACKET_LEFT):
            self.next() # , [
            self.compileriden() # TODO
        return None

    def scope(self):
        self.crequire(Symbol.BRACE_LEFT)
        st = SymbolTable(self.cst)
        ret = AstBlock([], st)

        self.next() # {

        with self.cx.save_and_push(Context(st, self.etype)):
            while not self.cis(Symbol.BRACE_RIGHT):
                ret.stmts.append(self.statement())
            self.crequire(Symbol.BRACE_RIGHT)
            self.next()

        return ret

    def ifstmt(self):
        self.crequire(Keyword.IF)
        self.next() # if

        st = SymbolTable(self.cst)
        ret = AstBinary(Symbol.KWIF, AstBlock([], st), AstNone())
        etype = self.etype
        left: AstBlock = ret.left

        with self.cx.save_and_push(Context(st, Type(TypeID.LET))):
            left.stmts.append(self.fexpression())
            while self.cis(Symbol.SEMICOLON):
                left.stmts.append(self.fexpression())

            if not self.is_booleanish(left.stmts[-1].type) and len([x for x in self.expand_type(left.stmts[-1]) if x.uid == TypeID.SIG]) == 0:
                raise self.exception("Last statement of 'if' not a boolean")

            self.etype = etype

            if self.cis(Symbol.BRACE_LEFT):
                ret.right = self.ifscope()
            elif self.cis(Keyword.DO):
                self.next() # do
                ret.right = self.scopestatement()
            else:
                raise self.exception("Expected { or 'do' after if")

        return ret

    def ifscope(self):
        self.crequire(Symbol.BRACE_LEFT)
        ret = self.scope()

        if(self.cis(Keyword.ELSE)):
            self.next() # Else
            return AstBinary(Symbol.KWELSE, ret, self.scopestatement())
        else:
            return ret

    def forstmt(self):
        self.crequire(Keyword.FOR)
        self.next() # for

        etype = self.etype
        st = SymbolTable(self.cst)
        with self.cx.save_and_push(Context(st, Type(TypeID.LET))):
            ret = AstBinary(Symbol.KWFOR, self.forcond(), AstNone())

            self.etype = etype
            if self.cis(Symbol.BRACE_LEFT):
                ret.right = self.scope()
            elif self.cis(Keyword.DO):
                self.next() # do
                ret.right = self.scopestatement()
            else:
                raise self.exception("Expected { or 'do' after for")

        return ret # Todo does this scoping work?

    def forcond(self):
        ftype = -1
        ret = AstUnary(Symbol.SYMBOL_INVALID, AstBlock([], self.cst))
        forstart = AstNone()

        if self.cis(Symbol.SEMICOLON):
            ftype = 0
        elif self.is_varclass() or self.is_type() or self.cis(Keyword.LET):
            decl = self.vardeclperiod()
            if self.cis(Symbol.COLON):
                ftype = 1
                forstart = decl
            else:
                vardecl = self.vardeclass()
                if self.cis(Symbol.BRACE_LEFT) or self.cis(Keyword.DO):
                    ftype = 2
                else:
                    ftype = 0
                forstart = AstBinary(Symbol.ASSIGN, decl, vardecl)

                for stmt in forstart.left.stmts:
                    var = stmt.stmt
                    if var.name in self.cst:
                        raise self.exception("{} already in symbol table".format(var.name))
                    else:
                        self.cst.add(var.name, var.sym)

        elif self.cis(TokenType.IDENTIFIER):
            forstart = self.assignment()
            if self.cis(Symbol.BRACE_LEFT) or self.cis(Keyword.DO):
                ftype = 2
            else:
                ftype = 0
        else:
            type = 0
            forstart = self.fexpression()

        if ftype == 0: # At the first semicolon
            allforit = AstBlock([forstart], self.cst)

            self.crequire(Symbol.SEMICOLON)
            self.next() # ;

            if not self.cis(Symbol.SEMICOLON):
                allforit.stmts.append(self.mexpression())
            else:
                allforit.stmts.append(AstNone())

            self.crequire(Symbol.SEMICOLON)
            self.next()  # ; TODO Multiple statements

            if not self.cis(Symbol.BRACE_LEFT) and not self.cis(Keyword.DO):
                allforit.stmts.append(self.mexpression())
            else:
                allforit.stmts.append(AstNone())

            ret.stmt = allforit
            ret.op = Symbol.KWFORCLASSIC
        elif ftype == 1: # At the colon
            forcolon = AstBinary(Symbol.COLON, forstart, AstNone())
            self.etype = forcolon.left.type

            self.crequire(Symbol.COLON)
            self.next() # :

            forcolon.right = self.expression()

            for stmt in forcolon.left.stmts:
                var = stmt.stmt
                if var.name in self.cst:
                    raise self.exception("{} already in symbol table".format(var.name))
                else:
                    self.cst.add(var.name, var.sym)

            ret.stmt = forcolon
            ret.op = Symbol.KWFOREACH
        elif ftype == 2: # We done boys
            if forstart.asttype != AstType.BINARY or forstart.op != Symbol.ASSIGN:
                raise self.exception("Illegal LUA for format")

            if forstart.left.asttype != AstType.BLOCK or forstart.right.asttype != AstType.BLOCK: # TODO
                raise self.exception("Illegal LUA for format")

            if len(forstart.left.stmts) != 1 or (len(forstart.right.stmts) != 2 and len(forstart.right.stmts) != 3):
                raise self.exception("Illegal LUA for format")

            ret.stmt = forstart
            ret.op = Symbol.KWFORLUA
        else:
            raise ParserError("Unknown for type")

        return ret

    def whilestmt(self):
        self.crequire(Keyword.WHILE)
        self.next() # while

        st = SymbolTable(self.cst)
        etype = self.etype
        ret = AstBinary(Symbol.KWWHILE, AstBlock([], st), AstNone())

        with self.cx.save_and_push(Context(st, Type(TypeID.LET))):
            ret.left.stmts.append(self.fexpression())
            while self.cis(Symbol.SEMICOLON):
                ret.left.stmts.append(self.fexpression())

            if not self.is_booleanish(ret.left.stmts[-1].type):
                raise self.exception("Last statement in 'while' cannot be converted to boolean")

            self.etype = etype
            if self.cis(Symbol.BRACE_LEFT):
                ret.right = self.scope()
            elif self.cis(Keyword.DO):
                self.next() # do
                ret.right = self.scopestatement()
            else:
                raise self.exception("Expected { or 'do' after while")

        return ret

    def switchstmt(self):
        self.crequire(Keyword.SWITCH)
        self.next()  # while

        st = SymbolTable(self.cst)
        etype = self.etype
        ret = AstBinary(Symbol.KWSWITCH, AstBlock([], st), AstNone())

        with self.cx.save_and_push(Context(st, Type(TypeID.LET))):
            ret.left.stmts.append(self.fexpression())
            while self.cis(Symbol.SEMICOLON):
                ret.left.stmts.append(self.fexpression())

            self.aux = ret.left.stmts[-1].type
            self.etype = etype

            ret.right = self.switchscope()

            self.aux = Type(0)

            return ret

    def switchscope(self):
        self.crequire(Symbol.BRACE_LEFT)
        self.next() # {

        ret = AstBlock([], self.cst)

        while not self.cis(Symbol.BRACE_RIGHT):
            ret.stmts.append(self.casestmt())

        self.crequire(Symbol.BRACE_RIGHT)
        self.next()

        return ret

    def casestmt(self):
        ret = AstBinary(Symbol.SYMBOL_INVALID, AstNone(), AstNone())

        if self.cis(Keyword.ELSE):
            ret.op = Symbol.KWELSE
            self.next() # else
        elif self.cis(Keyword.CASE):
            ret.op = Symbol.KWCASE
            self.next() # case

            ret.left = AstBlock([], self.cst)

            exp = self.expression()
            if exp.type != self.aux:
                pass # TODO raise self.exception("Case clause not same as switch type")
            ret.left.stmts.append(exp)
            while self.cis(Symbol.COMMA):
                self.next() # ,
                exp = self.expression()
                if exp.type != self.aux:
                    pass # TODO raise self.exception("Case clause not same as switch type")
                ret.left.stmts.append(exp) # TODO Poorman's do-while
        else:
            raise self.exception("Expected 'else' or 'case' in switch context")

        st = SymbolTable(self.cst)
        with self.cx.save_and_push(Context(st, self.etype)):
            ret.right = AstUnary(Symbol.SYMBOL_INVALID, AstNone())

            if self.cis(Keyword.CONTINUE):
                ret.right.op = Symbol.KWCONTINUE
            elif self.cis(Symbol.BRACE_LEFT):
                ret.right.op = Symbol.KWCASE
                ret.right.stmt = self.scope()
            elif self.cis(Keyword.DO):
                self.next() # do

                ret.right.op = Symbol.KWCASE
                ret.right.stmt = self.scopestatement()
            else:
                raise self.exception("Expected 'continue', 'do' or scope after switch clause")

        return ret

    def returnstmt(self):
        self.crequire(Keyword.RETURN)
        self.next() # return

        ret = AstUnary(Symbol.KWRETURN, AstNone())
        if self.cis(Keyword.VOID):
            self.next() # void
        elif not self.cis(Symbol.SEMICOLON):
            ret.stmt = AstBlock([], self.cst)
            ret.stmt.stmts.append(self.expression())
            while self.cis(Symbol.COMMA):
                self.next() # ,
                ret.stmt.stmts.append(self.expression())
        self.crequire(Symbol.SEMICOLON)
        self.next() # ;

        if self.etype.uid == TypeID.LET:
            pass # First return is always fine
        elif isinstance(ret.stmt, AstNone) and self.etype.uid != TypeID.VOID:
            raise self.exception("Returning void from non-void function")
        else:
            retypes = self.tt[self.etype.uid].returns
            num = 0
            vnum = 0
            while num < len(retypes):
                if vnum < len(ret.stmt.stmts):
                    val = ret.stmt.stmts[vnum]
                    types = self.expand_type(val)
                    for type in types:
                        if retypes[num].uid == TypeID.SIG and type.uid != TypeID.SIG:
                            ret.stmt.stmts.insert(vnum, AstQWord(0, Type(TypeID.SIG)))
                            vnum += 1
                        else:
                            if not self.can_be_weak_cast(val.type, type):
                                raise self.exception("Cannot cast return type {} to {}".format(val.type.uid, type.uid))
                        num += 1
                    vnum += 1
                else:
                    ret.stmt.stmts.append(AstQWord(0, retypes[num]))
                    num += 1

        return ret

    def raisestmt(self):
        self.crequire(Keyword.RAISE)
        self.next() # raise

        ret = AstUnary(Symbol.KWRAISE, AstBlock([], self.cst))

        ret.stmt.stmts.append(self.expression())
        while self.cis(Symbol.COMMA):
            self.next() # next
            ret.stmt.stmts.append(self.expression())

        self.crequire(Symbol.SEMICOLON)
        self.next() # ;

        # TODO check returns and add automatic sig creation

        return ret

    def gotostmt(self):
        self.crequire(Keyword.GOTO)
        self.next() # goto

        ret = AstUnary(Symbol.KWGOTO, AstString(self.c.value))
        self.next()
        self.crequire(Symbol.SEMICOLON)
        self.next() # ;

        return ret

    def labelstmt(self):
        self.crequire(Keyword.LABEL)
        self.next() # label

        ret = AstUnary(Symbol.KWLABEL, AstString(self.c.value))
        self.next()
        self.crequire(Symbol.SEMICOLON)
        self.next()  # ;

        return ret

    def deferstmt(self):
        self.crequire(Keyword.DEFER)
        self.next()  # defer

        ret = AstUnary(Symbol.KWDEFER, self.expression()) # TODO Not an expression...
        self.next()
        self.crequire(Symbol.SEMICOLON)
        self.next()  # ;

        return ret

    def breakstmt(self):
        self.crequire(Keyword.BREAK)
        self.next()  # defer
        self.crequire(Symbol.SEMICOLON)
        self.next()  # ;

        return AstUnary(Symbol.KWBREAK, AstNone())

    def continuestmt(self):
        self.crequire(Keyword.CONTINUE)
        self.next()  # defer
        self.crequire(Symbol.SEMICOLON)
        self.next()  # ;

        return AstUnary(Symbol.KWCONTINUE, AstNone())

    def leavestmt(self):
        self.crequire(Keyword.LEAVE)
        self.next()  # defer
        self.crequire(Symbol.SEMICOLON)
        self.next()  # ;
